--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -7,7 +7,7 @@ body{
 h1{
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: weight;
   font-style: normal;
 
   letter-spacing: 1.2em;
@@ -23,7 +23,7 @@ h1{
   color:rgb(255, 192, 203);
 }
 
-#basic p{
+#basic > p{
   font-weight: bold;
 
 }
