--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -1,11 +1,18 @@
-body{
+
+html{
   font-size: 20px;
+}
+
+
+body{
+  
   font-family:"Arial", "Meiryo", sans-serif ;
   text-align: center;
 }
 
 h1{
   font-family: "Josefin Sans", sans-serif;
+  font-size: 2rem;
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
